Fixed the format of the code

--- a/bookaparty.html
+++ b/bookaparty.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <header>
-        <a class="link" href="index.html"><button>Home</button></a>
-        <a class="link" href="menu.html"><button>Menu</button></a>
-        <a class="link" href="promos.html"><button>Promos</button></a>
-        <a class="link" href="supercard+.html"><button>Supercard+</button></a>
-        <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
+        <nav>
+            <a class="link" href="index.html"><button>Home</button></a>
+            <a class="link" href="menu.html"><button>Menu</button></a>
+            <a class="link" href="promos.html"><button>Promos</button></a>
+            <a class="link" href="supercard+.html"><button>Supercard+</button></a>
+            <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
+        </nav>
     </header>
 </body>
 </html>
