--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <!--Header-->
     <header>
-        <a class="link" href="index.html"><button>Home</button></a>
-        <a class="link" href="menu.html"><button>Menu</button></a>
-        <a class="link" href="promos.html"><button>Promos</button></a>
-        <a class="link" href="supercard+.html"><button>Supercard+</button></a>
-        <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
+        <nav>
+            <a class="link" href="index.html"><button>Home</button></a>
+            <a class="link" href="menu.html"><button>Menu</button></a>
+            <a class="link" href="promos.html"><button>Promos</button></a>
+            <a class="link" href="supercard+.html"><button>Supercard+</button></a>
+            <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
+        </nav>
     </header>
     <!--End header-->
 
