--- a/supercard+.html
+++ b/supercard+.html
@@ -16,5 +16,14 @@
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
     </header>
+    <footer>
+        <nav>
+            <a class="link" href="https://www.facebook.com/ShakeysPH"><button>facebook</button></a>
+            <a class="link" href="https://twitter.com/PHShakeys"><button>Twitter</button></a>
+            <a class="link" href="https://www.instagram.com/shakeysph/"><button>Instagram</button></a>
+            <a class="link" href="aboutus.html"><button>About us</button></a>
+            <a class="link" href="contactus.html"><button>Contact us</button></a>
+        </nav>
+    </footer>
 </body>
 </html>
