fixed some errors in the about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="stylee.css">
     <style>
         body {
-            margin: 0;
-            padding: 0;
+            margin: auto;
+            padding: auto;
             font-family: 'Courier New', Courier, monospace;
+        }
+
+        h1 {
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 30px;
         }
 
         p {
