--- a/contactus.html
+++ b/contactus.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
+    <!--Header-->
     <header>
         <nav>
             <a class="link" href="index.html"><button>Home</button></a>
@@ -16,6 +17,18 @@
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
     </header>
+    <!--End header-->
+
+    <!--Hero Section-->
+    <main>
+        <article>
+            <section>
+                <h1>You may also call our hotline 7777-7777 or #77777 or email callcenter@shakeysdelivery.com.ph</h1>
+            </section>
+        </article>
+    </main>
+    <!--End of hero section-->   
+    <!--Footer-->
     <footer>
         <nav>
             <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/facebook_logo.png" alt="Facebook"></button></a>
@@ -25,5 +38,6 @@
             <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
+    <!--End of footer--> 
 </body>
 </html>
