--- a/supercard+.html
+++ b/supercard+.html
@@ -18,11 +18,11 @@
     </header>
     <footer>
         <nav>
-            <a class="link" href="https://www.facebook.com/ShakeysPH"><button>facebook</button></a>
-            <a class="link" href="https://twitter.com/PHShakeys"><button>Twitter</button></a>
-            <a class="link" href="https://www.instagram.com/shakeysph/"><button>Instagram</button></a>
-            <a class="link" href="aboutus.html"><button>About us</button></a>
-            <a class="link" href="contactus.html"><button>Contact us</button></a>
+            <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/facebook_logo.png" alt="Facebook"></button></a>
+            <a class="footer-link" href="https://twitter.com/PHShakeys"><button class="footer-button"><img src="images/twitter_logo.jpg" alt="Twitter"></button></a>
+            <a class="footer-link" href="https://www.instagram.com/shakeysph/"><button class="footer-button"><img src="images/instagram_logo.png" alt="Instagram"></button></a>
+            <a class="footer-link" href="aboutus.html"><button class="footer-button"><img src="images/about_us.png" alt="About us"></button></a>
+            <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
 </body>
