fixed some error in contact us

--- a/contactus.html
+++ b/contactus.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakey's Philippines</title>
     <link rel="stylesheet" href="stylee.css">
+    <style>
+        main {
+    background-color: rgb(202, 25, 25);
+    color: white;
+    padding: 400px;
+    text-align: center;
+    }
+    </style>
 </head>
 <body>
     <!--Header-->
