--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--Hero Section-->
     <main>
-        <h1>he</h1>
+        <h1>Shakey</h1>
     </main>
     <!--End of hero section-->   
     <!--Footer-->
