enhance the responsiveness of the website by making adjustments in the 'supercard.html' file within the main section of the code

--- a/supercard+.html
+++ b/supercard+.html
@@ -7,16 +7,41 @@
     <link rel="stylesheet" href="stylee.css">
 
     <style>
-        main{
+        main {
             text-align: center;
+            padding: 20px; 
         }
 
         .card-container {
-            margin: 100px;
+            margin: 20px; 
             text-align: center;
         }
+
         img {
-            margin: 110px;
+            margin: 10px; 
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.5;
+        }
+
+        @media only screen and (max-width: 600px) {
+            main {
+                padding: 10px; 
+            }
+
+            .card-container {
+                margin: 10px; 
+            }
+
+            img {
+                margin: 5px; 
+            }
+
+            p {
+                font-size: 14px; 
+            }
         }
     </style>
 </head>
