finished the index.html and made an adjusment in the footer

--- a/bookaparty.html
+++ b/bookaparty.html
@@ -29,6 +29,7 @@
 
         h1, p, form {
             margin-bottom: 20px;
+            text-align: center;
         }
 
         form {
@@ -105,14 +106,14 @@
                 <button type="submit">Submit</button>
                 
             </form>
-    <footer>
-        <nav>
-            <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/facebook_logo.png" alt="Facebook"></button></a>
-            <a class="footer-link" href="https://twitter.com/PHShakeys"><button class="footer-button"><img src="images/twitter_logo.jpg" alt="Twitter"></button></a>
-            <a class="footer-link" href="https://www.instagram.com/shakeysph/"><button class="footer-button"><img src="images/instagram_logo.png" alt="Instagram"></button></a>
-            <a class="footer-link" href="aboutus.html"><button class="footer-button"><img src="images/about_us.png" alt="About us"></button></a>
-            <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
-        </nav>
-    </footer>
+            <footer>
+                <nav>
+                    <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/fb.png" alt="Facebook"></button></a>
+                    <a class="footer-link" href="https://twitter.com/PHShakeys"><button class="footer-button"><img src="images/twitter_logo.jpg" alt="Twitter"></button></a>
+                    <a class="footer-link" href="https://www.instagram.com/shakeysph/"><button class="footer-button"><img src="images/instagram-7411557_1280.webp" alt="Instagram"></button></a>
+                    <a class="footer-link" href="aboutus.html"><button class="footer-button"><img src="images/about_us.png" alt="About us"></button></a>
+                    <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
+                </nav>
+            </footer>
 </body>
 </html>
