--- a/index.html
+++ b/index.html
@@ -6,37 +6,107 @@
     <title>Shakey's Philippines</title>
     <link rel="stylesheet" href="stylee.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <!--Header-->
-    <header>
+    <!--Navbar-->
         <nav>
-            <a class="link" href="User.html"><button><i class="fa-solid fa-user"></i></button></a>
             <a class="link" href="index.html"><button>Home</button></a>
             <a class="link" href="menu.html"><button>Menu</button></a>
             <a class="link" href="promos.html"><button>Promos</button></a>
             <a class="link" href="supercard+.html"><button>Supercard+</button></a>
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
-    </header>
-    <!--End header-->
+    <!--End Navbar-->
+
+    <!--Header-->
+    <header>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://zeus-promotion-prod-v2.s3.amazonaws.com/banners/1705258377.275492.png" class="d-block w-100" alt="Supercard is the key to win a brand new BMW.">
+              </div>
+              <div class="carousel-item">
+                <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/2024_Meal_Deal_Classic-Product_Image500x500_1.png" class="d-block w-100" alt="Meal Deal">
+              </div>
+              <div class="carousel-item">
+                <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/PM_BUNDLE-WEBAPP-PM3-800x800_2.png" class="d-block w-100" alt="Pizza and mojos">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </header>
+      <!--End of Header-->
+    <!--End of Header-->
 
     <!--Hero Section-->
     <main>
-        <h1>Shakey</h1>
+        <section class="bg-danger text-white p-5">
+            <h3 class="text-center mb-5">Featured products</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/MC_KbgxNQk.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Pizza">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Manager's Choice</h5>
+                          <p class="card-text">Starts at 379</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Shakey's no. 1 pizza. Ham, beef, Italian sausage, green bell pepper and onions.</p>
+                      </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/CC-PRODUCT_IMAGE-1_2_URPTwLF.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Merry Pepperoni Holiday Pizza">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Merry Pepperoni Holiday Pizza</h5>
+                          <p class="card-text">Starts at 379</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">The perfect blend of savory and sweet in every bite. Made creamy white sauce pizza, topped with pepperoni, mozzarella, parmesan with a hint of sweet honey</p>
+                      </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Shakeys-Special.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Shakeys-Special">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Shakey's Special</h5>
+                          <p class="card-text">Starts at 379</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Loaded with beef, Italian sausage, pepperoni, salami, mushrooms, green bell pepper, and onions.</p>
+                      </div>
+                </div>
+                </div>
+                </div>
+                </div>
+            </div>       
+        </section>
     </main>
     <!--End of hero section-->   
     <!--Footer-->
     <footer>
         <nav>
-            <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/facebook_logo.png" alt="Facebook"></button></a>
+            <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/fb.png" alt="Facebook"></button></a>
             <a class="footer-link" href="https://twitter.com/PHShakeys"><button class="footer-button"><img src="images/twitter_logo.jpg" alt="Twitter"></button></a>
-            <a class="footer-link" href="https://www.instagram.com/shakeysph/"><button class="footer-button"><img src="images/instagram_logo.png" alt="Instagram"></button></a>
+            <a class="footer-link" href="https://www.instagram.com/shakeysph/"><button class="footer-button"><img src="images/instagram-7411557_1280.webp" alt="Instagram"></button></a>
             <a class="footer-link" href="aboutus.html"><button class="footer-button"><img src="images/about_us.png" alt="About us"></button></a>
             <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
     <!--End of footer--> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
