Finished the promos.html

--- a/promos.html
+++ b/promos.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Shakey's Philippines</title>
     <link rel="stylesheet" href="stylee.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,6 +18,52 @@
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
     </header>
+
+    <main>
+        <main>
+            <section class="bg-danger text-white p-5">
+                <h3 class="text-center mb-5">Promos</h3>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/PM_BUNDLE-GRABFOODPANDA-PM1-500x500.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Pizza and mojos">
+                            <div class="card-body">
+                              <h5 class="card-title fw-bold">Pizza 'N' Mojos Bundle 1</h5>
+                              <p class="card-text">Starts at 369</p>
+                            </div>
+                            <hr>
+                            <p class="card-text">Enjoy 1 Regular Classic or All-time favorite Thin Crust Pizza and Mojos ‘N’ Dip for only P369! Save 209!</p>
+                          </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/PM_BUNDLE-WEBAPP-PM3-800x800_2.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Pizza 'N' Mojos Bundle 3">
+                            <div class="card-body">
+                              <h5 class="card-title fw-bold">Pizza 'N' Mojos Bundle 3</h5>
+                              <p class="card-text">Starts at 1069</p>
+                            </div>
+                            <hr>
+                            <p class="card-text">Enjoy 1 Party Classic or All-time favorite Thin Crust Pizza and Mojos Supreme for only P1,069! Save 329!</p>
+                          </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/2024_Meal_Deal_GOLD-Product_Image500x500_1.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="2024 Meet-up">
+                            <div class="card-body">
+                              <h5 class="card-title fw-bold">2024 Meet-up Meal Deal Gold</h5>
+                              <p class="card-text">Starts at 2424</p>
+                            </div>
+                            <hr>
+                            <p class="card-text">The bundle includes choice of any Party All-Time Favorite or Classic Pizza, 8pcs. Chicken 'N' Mojos, 2 1.5L bottle of Coke. PLUS, a Gold Supercard with a FREE upgraded Welcome Treat. Good for 8-10 pax.</p>
+                          </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                </div>       
+            </section>
+        </main>
+    </main>
     <footer>
         <nav>
             <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/fb.png" alt="Facebook"></button></a>
@@ -25,5 +73,10 @@
             <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
