--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakey's Philippines</title>
     <link rel="stylesheet" href="stylee.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,6 +18,155 @@
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
     </header>
+
+    <main>
+        <section class="bg-danger text-white p-5">
+            <h3 class="text-center mb-5">Menu</h3>
+            <div class="row">
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/BOL_rx3AFOo.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Bunch Of Lunch Original">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Bunch Of Lunch Original</h5>
+                          <p class="card-text">Starts at 229</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Favorites on one plate: a slice of Hawaiian Delight Hand Tossed Pizza, Chicken 'n' Mojos, Skilletti and Garlic Bread.</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Salad-chicken-n-pizza_G2ptkRx.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Salad Chicken N Pizza">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Salad Chicken N Pizza</h5>
+                          <p class="card-text">Starts at 229</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Garden Fresh salad, one piece Chicken 'n' Mojos and two slices of Hawaiian Delight pizza.</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/SBOL_3N6dAZu.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Super Bunch Of Lunch">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Super Bunch Of Lunch</h5>
+                          <p class="card-text">Starts at 365</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Our famous Bunch of Lunch made super with Chicken 'n' Corn soup and a side salad.</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/bacon-n-cheese_xvsxray.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Bacon And Cheese Fusilli">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Bacon And Cheese Fusilli</h5>
+                          <p class="card-text">Starts at 299</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Italian sausage baked in fusilli pasta with marinara sauce topped with cheddar cheese and parsley. Served with garlic bread</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Carbonara_Supreme.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Carbonara Supreme">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Carbonara Supreme</h5>
+                          <p class="card-text">Starts at 299</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Creamy white sauce pasta with bacon, ham, and button mushrooms with premium parmesan cheese. Served with garlic bread.</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Spinach-Lasagna-Solo-Prod-images-500x500.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Spinach Roll-Ups">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Spinach Roll-Ups</h5>
+                          <p class="card-text">Starts at 334</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">Creamy Lasagna rolls layered with spinach and white sauce</p>
+                      </div>
+                </div>
+                </div>
+                </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Beef-n-Onion.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Classic Beef N' Onion Pizza Americana">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Classic Beef N' Onion Pizza Americana</h5>
+                          <p class="card-text">Starts at 1179</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">SUPERSIZED 18-inch classic pizza oozing with Pure Mozzarella Cheese topped with premium ground beef and fresh white onion slices.</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Bacon-Glazed_1.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Glazed Bacon Pizza Americana">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Glazed Bacon Pizza Americana</h5>
+                          <p class="card-text">Starts at 1329</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">NEW Pizza Americana Glazed Bacon, 18-inch savory pizza topped with sweet, crisp bacon and parsley</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Classic-Cheese_1.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Classic Cheese Pizza Americana">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Classic Cheese Pizza Americana</h5>
+                          <p class="card-text">Starts at 1179</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">SUPERSIZED 18-inch Oozing with Pure Mozzarella Cheese, irresistibly cheesy!</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Hawaiian-Delight.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Hawaiian Delight Pizza Americana">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Hawaiian Delight Pizza Americana</h5>
+                          <p class="card-text">Starts at 1179</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">SUPERSIZED 18-inch pizza topped with ham and pineapples, made with 100% Mozzarella Cheese!</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Hi-protein.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Hi Protein Pizza Americana">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Hi Protein Pizza Americana</h5>
+                          <p class="card-text">Starts at 1299</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">SUPERSIZED 18-inch ALL-MEAT pizza packed with beef, salami, pepperoni, ham and Italian sausage topped with a tangy ranch dressing and made with 100% Mozzarella Cheese! Truly protein loaded!</p>
+                      </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card">
+                        <img src="https://shakeys-zeus-prod.s3.amazonaws.com/images/Spinach-Prod-images-800x800.png" class="card-img-top object-fit-fill border rounded shadow p-3 mb-5 bg-body-tertiary rounded" data-aos="fade-up" alt="Classic Spinach Pizza Americana">
+                        <div class="card-body">
+                          <h5 class="card-title fw-bold">Classic Spinach Pizza Americana</h5>
+                          <p class="card-text">Starts at 1299</p>
+                        </div>
+                        <hr>
+                        <p class="card-text">The perfect balance of your creamy spinach and a blend of different cheeses.</p>
+                      </div>
+                </div>
+                </div>
+                </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
     <footer>
         <nav>
             <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/fb.png" alt="Facebook"></button></a>
@@ -25,5 +176,10 @@
             <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
