--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             </button>
           </div>
       </header>
-      <!--End of Header-->
     <!--End of Header-->
 
-    <!--Hero Section-->
+    <!--Main Section-->
     <main>
         <section class="bg-danger text-white p-5">
             <h3 class="text-center mb-5">Featured products</h3>
@@ -91,7 +90,7 @@
             </div>       
         </section>
     </main>
-    <!--End of hero section-->   
+    <!--End of Main-->   
     <!--Footer-->
     <footer>
         <nav>
