--- a/supercard+.html
+++ b/supercard+.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <header>
+    <!--Navbar-->
         <nav>
             <a class="link" href="index.html"><button>Home</button></a>
             <a class="link" href="menu.html"><button>Menu</button></a>
@@ -54,8 +54,10 @@
             <a class="link" href="supercard+.html"><button>Supercard+</button></a>
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
-    </header>
+    <!--End of Navbar-->
 
+
+    <!--Main-->
     <main>
         <h1>A must-have card in every wallet!</h1>
         <p>Purchase your own SuperCard today for easy access to promos and freebies.</p>
@@ -74,6 +76,9 @@
         
         
     </main>
+    <!--End of Main-->
+
+    <!--Footer-->
     <footer>
         <nav>
             <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/fb.png" alt="Facebook"></button></a>
@@ -83,5 +88,6 @@
             <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
+    <!--End of footer-->
 </body>
 </html>
