--- a/aboutus.html
+++ b/aboutus.html
@@ -27,8 +27,8 @@
     </style>
 </head>
 <body>
-    <!--Header-->
-    <header>
+    <!--Narbar-->
+    
         <nav>
             <a class="link" href="index.html"><button>Home</button></a>
             <a class="link" href="menu.html"><button>Menu</button></a>
@@ -36,10 +36,10 @@
             <a class="link" href="supercard+.html"><button>Supercard+</button></a>
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
-    </header>
-    <!--End header-->
+    
+    <!--End of Navbar-->
 
-    <!--Hero Section-->
+    <!--Main-->
     <main>
         <article>
             <section>
@@ -68,7 +68,7 @@
             </section>
         </article>
     </main>
-    <!--End of hero section-->   
+    <!--End of Main-->   
     <!--Footer-->
     <footer>
         <nav>
