--- a/contactus.html
+++ b/contactus.html
@@ -15,8 +15,8 @@
     </style>
 </head>
 <body>
-    <!--Header-->
-    <header>
+    <!--Navbar-->
+
         <nav>
             <a class="link" href="index.html"><button>Home</button></a>
             <a class="link" href="menu.html"><button>Menu</button></a>
@@ -24,10 +24,10 @@
             <a class="link" href="supercard+.html"><button>Supercard+</button></a>
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
         </nav>
-    </header>
-    <!--End header-->
 
-    <!--Hero Section-->
+    <!--End of Navbar-->
+
+    <!--Main-->
     <main>
         <article>
             <section>
@@ -35,7 +35,7 @@
             </section>
         </article>
     </main>
-    <!--End of hero section-->   
+    <!--End of Main-->   
     <!--Footer-->
     <footer>
         <nav>
