--- a/promos.html
+++ b/promos.html
@@ -9,17 +9,17 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <!--Navbar-->
         <nav>
             <a class="link" href="index.html"><button>Home</button></a>
             <a class="link" href="menu.html"><button>Menu</button></a>
             <a class="link" href="promos.html"><button>Promos</button></a>
             <a class="link" href="supercard+.html"><button>Supercard+</button></a>
             <a class="link" href="bookaparty.html"><button>Book a Party</button></a>
-        </nav>
-    </header>
+        </nav>   
+    <!--End of Navbar-->
 
-    <main>
+    <!--main-->
         <main>
             <section class="bg-danger text-white p-5">
                 <h3 class="text-center mb-5">Promos</h3>
@@ -63,7 +63,9 @@
                 </div>       
             </section>
         </main>
-    </main>
+    <!--End of main-->
+
+    <!--Footer-->
     <footer>
         <nav>
             <a class="footer-link" href="https://www.facebook.com/ShakeysPH"><button class="footer-button"><img src="images/fb.png" alt="Facebook"></button></a>
@@ -73,6 +75,8 @@
             <a class="footer-link" href="contactus.html"><button class="footer-button"><img src="images/contact_us1.png" alt="Contact us"></button></a>
         </nav>
     </footer>
+
+    <!--End of Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
