debugged aboutus.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,15 +6,17 @@
     <title>Shakey's Philippines</title>
     <link rel="stylesheet" href="stylee.css">
     <style>
-        body {
-            margin: auto;
-            padding: auto;
-            font-family: 'Courier New', Courier, monospace;
+         main {
+        background-color: rgb(202, 25, 25);
+        color: white;
+        padding: 120px;
+        text-align: center;
         }
 
         h1 {
-            font-family: 'Courier New', Courier, monospace;
+            
             font-size: 30px;
+            text-align: center;
         }
 
         p {
