--- a/contactus.html
+++ b/contactus.html
@@ -5,26 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakey's Philippines</title>
     <link rel="stylesheet" href="stylee.css">
-    <style>
-        main {
-    background-color: rgb(202, 25, 25);
-    color: white;
-    padding: 20%;
-    text-align: center;
-    }
-    @media (max-width: 768px) {
-    main {
-        padding: 20%;
-    }
-}
-
-
-@media (max-width: 480px) {
-    main {
-        padding: 10%; 
-    }
-}
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <!--Navbar-->
@@ -41,11 +22,31 @@
 
     <!--Main-->
     <main>
-        <article>
-            <section>
-                <h1>You may also call our hotline 7777-7777 or #77777 or email callcenter@shakeysdelivery.com.ph</h1>
-            </section>
-        </article>
+        <section class="container-fluid bg-danger p-5 text-white">
+            <div class="row p-5">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="row p-5">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="row p-5">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="row p-5">
+                <div class="col-md-12">
+                    <h3 class="text-center">You may also call our hotline 7777-7777 or #77777 or email callcenter@shakeysdelivery.com.ph</h3>
+                </div>
+            </div>
+            <div class="row p-5">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="row p-5">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="row p-5">
+                <div class="col-md-12"></div>
+            </div>
+        </section>
     </main>
     <!--End of Main-->   
     <!--Footer-->
@@ -59,5 +60,6 @@
         </nav>
     </footer>
     <!--End of footer--> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
